--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "beastlink"
 version = "0.1.0"
-authors = ["Spyros Stathopoulos <spystath@gmail.com>"]
+authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
 edition = "2018"
 
 [lib]
