--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "beastlink"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
 description = "Rust bindings for CESYS beastlink"
 edition = "2018"
-license = "CSL-1.0"
-homepage = "http://cesys.com"
+license-file = "LICENSE"
+homepage = "https://github.com/arc-instruments/beastlink-rs"
 repository = "https://github.com/arc-instruments/beastlink-rs"
+keywords = ["fpga", "bindings"]
 
 exclude = ["contrib/*"]
 
@@ -14,10 +15,10 @@ exclude = ["contrib/*"]
 name = "beastlink"
 
 [dependencies]
-num-derive = "0.3"
-num-traits = "0.2"
-ctor = "0.1"
-libc = "0.2"
+num-derive = "^0.3"
+num-traits = "^0.2"
+ctor = "^0.1"
+libc = "^0.2"
 
 [dev-dependencies]
-serial_test = "0.4"
+serial_test = "^0.4"
